--- a/home.html
+++ b/home.html
@@ -8,8 +8,16 @@
     <div class="game">
       <div class="result"></div>
       <div class="dealer">
+        <div class="dealer-cards">
+
+        </div>
+        <div class="total-dealer"></div>
       </div>
       <div class="player">
+        <div class="player-cards">
+
+        </div>
+        <div class="total-player"></div>
       </div>
       <div class="helpers">
         <button id="play">PLAY</button>
