--- a/home.html
+++ b/home.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BLACKJACK</title>
+    <meta charset=“UTF-8”>
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+    <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
     <link rel="stylesheet" href="main.css">
+    <title>BLACKJACK</title>
   </head>
   <body>
     <div id="insurance-notification" style="display: none;">
@@ -27,7 +30,6 @@
       </div>
       <div class="player">
         <div class="player-cards">
-
         </div>
         <div class="total-player"></div>
       </div>
@@ -42,6 +44,7 @@
         <button id="hit" disabled>HIT</button>
         <button id="stand" disabled>STAND</button>
         <button id="double" disabled>DOUBLE</button>
+        <button id="split" style="display: none;">SPLIT</button>
       </div>
     </div>
     <script src="class.js" type="module"></script>
